# fiware-mcp-client

./: .gitignore  .template.env  README.md  client.py  config.example.yaml  judge-spec.json  mcp_call_example.py  pyproject.toml
Question id=24 v1.csv/: results.csv
app/: __init__.py  cli.py  config.py  evaluator.py  logging_conf.py  minimun-test-client.py  prompts.py  runner.py  types.py
benchmark/: Question id=10 v1.csv  Question id=10 v2.csv  Question id=10 v3.csv  Question id=11 v1.csv  Question id=11 v2.csv  Question id=12 v1.csv  Question id=12 v2.csv  Question id=14 v1.csv  Question id=14 v2 bad.csv  Question id=14 v2.csv  Question id=20 v1.2.csv  Question id=20 v1.csv  Question id=20 v2.csv  Question id=21 v1.csv  Question id=21 v2.csv  Question id=23 v1.csv  Question id=23 v2.csv  Question id=24 v1.csv  Question id=24 v2.csv  Question id=25 v1.csv  Question id=25 v2.csv  Question id=26 v1.csv  Question id=26 v2.csv  Question id=30 v1.csv  Question id=30 v2.csv  Question id=31 v1.csv  Question id=31 v2.csv  Question id=32 v1.csv  Question id=32 v2.csv  Question id=33 v1.csv  Question id=33 v2.csv  Question id=40 v1.csv  Question id=40 v2.csv  Question id=41 v1.csv  Question id=41 v2.csv  Question id=42 v1.csv  Question id=42 v2.csv  Question id=43 v1.csv  Question id=43 v2.csv  Question id=44 v1.csv  (+10 more)
data/: Fiware Client Test Plan Difficulty 1-3.csv  judge-spec-id-10.json  judge-spec-id-11.json  judge-spec-id-12.json  judge-spec-id-14.json  judge-spec-id-20.json  judge-spec-id-21.json  judge-spec-id-23.json  judge-spec-id-24.json  judge-spec-id-25.json  (+16 more)
(+30 files in other folders)
